--- a/src/app/assets/main.css
+++ b/src/app/assets/main.css
@@ -23210,7 +23210,7 @@ li.has-dropdown1 span {
     position: relative;
  }
   .cs_nav .cs_nav_list > li.menu-item-has-children > a::after {
-    content: "\f282";
+    /* content: "\f282"; */
     font-family: bootstrap-icons;
     font-weight: 900;
     display: inline-block;
