--- a/src/app/assets/main.css
+++ b/src/app/assets/main.css
@@ -120,6 +120,43 @@ Location:
   margin: 0px 0 0 10px;
   padding-bottom: 10px;
 }
+
+.single-input .error-border {
+  border: 1px solid #ac4646 !important;
+}
+
+.single-input .success-border {
+  border: 1px solid green !important;
+}
+
+.single-input .form-control {
+  border: none; /* No border by default */
+  outline: none; /* Prevents default browser focus border */
+}
+
+.phone-input-custom {
+  width: 100% !important;
+  padding-left: 50px !important; /* Space for country code */
+  font-size: 16px !important;
+  border: 1px solid #ccc !important;
+  border-radius: 5px !important;
+  height: 45px !important; /* Match other input fields */
+}
+
+.phone-input-container {
+  position: relative;
+  width: 100%;
+}
+
+.phone-input-container .flag-dropdown {
+  border-radius: 5px !important;
+}
+
+.phone-input-container .flag-dropdown,
+.phone-input-custom {
+  height: 45px !important; /* Fix inconsistent height */
+}
+
 /* Default border */
 .single-input input {
   border: none;
